--- a/com.unity.shadergraph/Editor/Resources/UXML/GraphInspector.uxml
+++ b/com.unity.shadergraph/Editor/Resources/UXML/GraphInspector.uxml
@@ -1,4 +1,4 @@
-<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:sg="UnityEditor.ShaderGraph.Drawing">
+﻿<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:sg="UnityEditor.ShaderGraph.Drawing">
     <ui:VisualElement name="content" picking-mode="Ignore">
         <ui:VisualElement name="header" picking-mode="Ignore">
             <ui:VisualElement name="labelContainer" picking-mode="Ignore">
@@ -12,7 +12,9 @@
                 <TabButton name="NodeSettingsButton" text="Node Settings" target="NodeSettingsContainer" />
                 <TabButton name="GraphSettingsButton" text="Graph Settings" target="GraphSettingsContainer" />
                 <ui:VisualElement name="GraphSettingsContainer" picking-mode="Ignore" />
-                <ui:VisualElement name="NodeSettingsContainer" picking-mode="Ignore" />
+                <ui:VisualElement name="NodeSettingsContainer" picking-mode="Ignore">
+                    <ui:Label name="maxItemsMessageLabel" picking-mode="Hidden" text ="Max of 20 visible items reached" />
+                </ui:VisualElement>
             </TabbedView>
     </ui:VisualElement>
     <sg:ResizableElement pickingMode="Ignore" resizeRestriction="FlexDirection"/>
