--- a/com.unity.shadergraph/Editor/Resources/Styles/PropertySheet.uss
+++ b/com.unity.shadergraph/Editor/Resources/Styles/PropertySheet.uss
@@ -1,7 +1,9 @@
 PropertySheet {
     margin-top: 4px;
     margin-bottom: 4px;
-    border-width: 0.5px;
+    padding-left: 4px;
+    border-color: #1F1F1F;
+    border-width: 1.0px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
@@ -21,11 +23,18 @@ PropertySheet > #content > #error > Label{
 }
 
 PropertySheet > #content > #header > Label{
-    color: #C1C1C1;
+    background-color: #1F1F1F;
     font-size: 11px;
     -unity-font-style: bold;
 }
 
 PropertySheet > #content > #foldout {
     margin-left: 21px;
+}
+
+PropertySheet >.unity-label
+{
+    background-color: #1F1F1F;
+    font-size: 11px;
+    -unity-font-style: bold;
 }
