--- a/TestProjects/UniversalGraphicsTest/Assets/Editor/Converter/converter_editor.uxml
+++ b/TestProjects/UniversalGraphicsTest/Assets/Editor/Converter/converter_editor.uxml
@@ -1,4 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
+    <Style src="converter_editor.uss" />
     <ui:VisualElement style="height: 25px; width: 1012px;">
         <ui:Label text="Render Pipeline Converter" style="-unity-font-style: bold; font-size: 16px;" />
     </ui:VisualElement>
@@ -7,5 +8,5 @@
         <ui:DropdownField index="-1" style="height: 27px; width: 208px;" />
         <ui:VisualElement style="flex-grow: 1;" />
     </ui:VisualElement>
-    <ui:ListView focusable="true" name="convertersListView" style="flex-grow: 1; height: 114px;" />
+    <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="convertersScrollView" style="flex-grow: 1;" />
 </ui:UXML>
