--- a/com.unity.shadergraph/Editor/Resources/Styles/PropertySheet.uss
+++ b/com.unity.shadergraph/Editor/Resources/Styles/PropertySheet.uss
@@ -1,14 +1,11 @@
 PropertySheet {
     margin-top: 4px;
     margin-bottom: 4px;
-    padding-left: 4px;
-    border-color: #1F1F1F;
-    border-width: 1.0px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-}
-PropertySheet > #content > #header{
-    margin-left: 4px;
+    padding-left: 1px;
+    padding-right: 1px;
+    border-width: 0.5px;
+    border-color: dimgray;
+    border-radius: 5px;
 }
 
 PropertySheet > #content > #error {
@@ -22,9 +19,18 @@ PropertySheet > #content > #error > Label{
     color: yellow;
 }
 
+PropertySheet > #content > #header
+{
+    top: 1px;
+    border-color: dimgray;
+    border-radius: 5px;
+    background-color: #393939;
+}
+
 PropertySheet > #content > #header > Label{
-    background-color: #1F1F1F;
-    font-size: 11px;
+    margin-top: 4px;
+    font-size: 15px;
+    color: #a4a4a4;
     -unity-font-style: bold;
 }
 
