--- a/TestProjects/UniversalGraphicsTest/Assets/Editor/Converter/converter_editor.uxml
+++ b/TestProjects/UniversalGraphicsTest/Assets/Editor/Converter/converter_editor.uxml
@@ -11,5 +11,7 @@
     <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="convertersScrollView" style="flex-grow: 1;" />
     <ui:VisualElement style="flex-direction: row-reverse;">
         <ui:Button text="Convert" name="convertButton" style="flex-direction: column; max-width: 150px; min-width: 150px; max-height: 50px; min-height: 50px;" />
+        <ui:Label style="flex-grow: 1;" />
+        <ui:Button text="Initialize Converters" name="initializeButton" tooltip="This will initialize all the converters that has been toggled on." style="flex-direction: column; max-width: 150px; min-width: 150px; max-height: 50px; min-height: 50px;" />
     </ui:VisualElement>
 </ui:UXML>
