Implemented property interweaving

--- a/com.unity.shadergraph/Editor/Resources/Styles/Blackboard.uss
+++ b/com.unity.shadergraph/Editor/Resources/Styles/Blackboard.uss
@@ -191,10 +191,12 @@
 }
 
 .blackboardSection {
-    padding-left: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-top: 0;
+    margin-top: 1px;
+    margin-bottom: 1px;
+    padding: 1px;
+    border-width: 0.25px;
+    border-radius: 2px;
+    border-color: dimgray;
 }
 
 .blackboardSection  > .mainContainer > #sectionHeader {
@@ -214,6 +216,8 @@
 }
 
 #SGBlackboardRow {
+    left: 1px;
+    right: 1px;
     padding-left: 4px;
     padding-right: 8px;
 }
