--- a/TestProjects/UniversalGraphicsTest/Assets/Editor/Converter/Widget/converter_widget_item.uxml
+++ b/TestProjects/UniversalGraphicsTest/Assets/Editor/Converter/Widget/converter_widget_item.uxml
@@ -4,7 +4,7 @@
         <ui:Label name="converterItemName" text="name" style="flex-grow: 1;" />
         <ui:Label name="converterItemInfo" style="visibility: hidden;" />
         <ui:Label name="converterItemPath" text="path..." style="flex-grow: 1;" />
-        <ui:Image name="converterItemStatusIcon" style="max-width: 24px; max-height: 24px; min-width: 24px; min-height: 24px; justify-content: center; flex-grow: 0; width: 24px;" />
-        <ui:Image name="converterItemHelpIcon" style="max-width: 24px; max-height: 24px; min-width: 24px; min-height: 24px; justify-content: center; flex-grow: 0;" />
+        <ui:Image name="converterItemStatusIcon" style="max-width: 16px; max-height: 16px; min-width: 16px; min-height: 16px; justify-content: center; flex-grow: 0; width: 16px; height: 16px;" />
+        <ui:Image name="converterItemHelpIcon" style="max-width: 16px; max-height: 16px; min-width: 16px; min-height: 16px; justify-content: center; flex-grow: 0;" />
     </ui:BindableElement>
 </ui:UXML>
