--- a/com.unity.shadergraph/Editor/Resources/UXML/GraphView/BlackboardSection.uxml
+++ b/com.unity.shadergraph/Editor/Resources/UXML/GraphView/BlackboardSection.uxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <UXML xmlns:ui="UnityEngine.UIElements">
     <ui:VisualElement name="sectionHeader" pickingMode="Ignore">
+        <ui:Foldout name="sectionTitleFoldout" pickingMode="Ignore" text=""/>
         <ui:Label name="sectionTitleLabel" pickingMode="Ignore" text="Text"/>
     </ui:VisualElement>
     <ui:VisualElement name="rowsContainer" pickingMode="Ignore" />
