--- a/com.unity.shadergraph/Editor/Resources/UXML/Blackboard/SGBlackboardCategory.uxml
+++ b/com.unity.shadergraph/Editor/Resources/UXML/Blackboard/SGBlackboardCategory.uxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <UXML xmlns:ui="UnityEngine.UIElements">
-    <ui:VisualElement name="sectionHeader" pickingMode="Ignore">
-        <ui:Label name="sectionTitleLabel" pickingMode="Ignore" text="Text"/>
+    <ui:VisualElement name="categoryHeader" pickingMode="Ignore">
+        <ui:Label name="categoryTitleLabel" pickingMode="Ignore" text="Text"/>
         <ui:TextField name="textField" text="" />
     </ui:VisualElement>
     <ui:VisualElement name="rowsContainer" pickingMode="Ignore" />
